--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
     </div>
 
     <div class="card">
-      <h2>Simple HTML Website</h2>
+      <h2>Basic HTML Website</h2>
       <p><a href="https://roadmap.sh/projects/basic-html-website" target="_blank">View Project Details</a></p>
-      <p><a href="./Simple-HTML-Website/" target="_blank">Live Demo</a></p>
+      <p><a href="./Basic-HTML-Website/" target="_blank">Live Demo</a></p>
+    </div>
+    
+    <div class="card">
+      <h2>Personal Portfolio</h2>
+      <p><a href="https://roadmap.sh/projects/portfolio-website" target="_blank">View Project Details</a></p>
+      <p><a href="./Personal-Portfolio/" target="_blank">Live Demo</a></p>
     </div>
   </main>
 
@@ -83,3 +89,4 @@
   </footer>
 </body>
 </html>
+
